--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   freezed_annotation: ^2.4.1
   http: ^1.2.1
+  image_picker: ^1.1.2
   shared_preferences: ^2.2.3
 
 dev_dependencies:
